fixing alignment and padding

--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -85,20 +85,23 @@ $L:     1600px;
 
 .intro, .main {
   z-index: 2;
-  padding: 20px;
+  padding: 20px 0;
   box-sizing: border-box;
 }
 
 .explanation, .participation {
   padding: 20px;
+  margin-bottom: 20px;
 }
 
 .requirements {
   padding: 20px 20px 80px;
+  margin-bottom: 20px;
 }
 
 .benefits {
   padding: 20px 20px 180px;
+  margin-bottom: 20px;
 }
 
 footer {
@@ -111,12 +114,11 @@ footer {
 }
 
 aside {
-  padding-top: 4rem;
   z-index: 2;
   width: 100%;
 
   div div {
-    margin-top: 4em;
+    margin-top: 20px;
     padding: 1em;
     padding: 55px 55px 75px;
     box-sizing: border-box;
